Создано с помощью Colaboratory

--- a/Итоговое_задание Знакомство с языком Python.ipynb
+++ b/Итоговое_задание Знакомство с языком Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwcg6f88Fk7H7PsGnNFnw8",
+      "authorship_tag": "ABX9TyNjuuvuAID0hFNaCpK8DjgP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,35 @@
     {
       "cell_type": "code",
       "source": [
+        "| Задание 44 |\n",
+        "| --- |\n",
+        "| В ячейке ниже представлен код генерирующий DataFrame, которая состоит всего из 1 столбца. Ваша задача перевести его в one hot вид. Сможете ли вы это сделать без get_dummies?\n",
+        "\n",
+        "import random\n",
+        "lst = ['robot'] * 10\n",
+        "lst += ['human'] * 10\n",
+        "random.shuffle(lst)\n",
+        "data = pd.DataFrame({'whoAmI'lst})\n",
+        "data.head() |"
+      ],
+      "metadata": {
+        "id": "VbVirtKwCnNB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "319kF2LMCxgf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pandas as pd \n",
         "import numpy as np \n",
         "import random\n",
@@ -37,9 +66,49 @@
         "lst += ['human'] * 10\n",
         "random.shuffle(lst)\n",
         "data = pd.DataFrame({'whoAmI': lst})\n",
-        "print(data)\n",
-        " \n",
-        "#==================================================#\n",
+        "print(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5Ahial_QA90z",
+        "outputId": "1bdf295d-a263-4c02-b82a-4d2b7a96ce05"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   whoAmI\n",
+            "0   robot\n",
+            "1   human\n",
+            "2   robot\n",
+            "3   human\n",
+            "4   human\n",
+            "5   human\n",
+            "6   human\n",
+            "7   robot\n",
+            "8   human\n",
+            "9   robot\n",
+            "10  robot\n",
+            "11  robot\n",
+            "12  robot\n",
+            "13  human\n",
+            "14  human\n",
+            "15  human\n",
+            "16  robot\n",
+            "17  robot\n",
+            "18  human\n",
+            "19  robot\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "data['tmp'] = 1\n",
         "data.set_index([data.index, 'whoAmI'], inplace=True)\n",
         "data = data.unstack(level=-1, fill_value = 0).astype(int)\n",
@@ -51,57 +120,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "5Ahial_QA90z",
-        "outputId": "6e5786b5-b1d3-412a-c651-10321e1ede98"
+        "id": "sNO9KqNJC3An",
+        "outputId": "a50406fc-d043-4943-ca06-b48786539340"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   whoAmI\n",
-            "0   robot\n",
-            "1   human\n",
-            "2   human\n",
-            "3   human\n",
-            "4   human\n",
-            "5   robot\n",
-            "6   robot\n",
-            "7   robot\n",
-            "8   human\n",
-            "9   robot\n",
-            "10  robot\n",
-            "11  human\n",
-            "12  human\n",
-            "13  robot\n",
-            "14  robot\n",
-            "15  human\n",
-            "16  robot\n",
-            "17  robot\n",
-            "18  human\n",
-            "19  human\n",
             "    human  robot\n",
             "0       0      1\n",
             "1       1      0\n",
-            "2       1      0\n",
+            "2       0      1\n",
             "3       1      0\n",
             "4       1      0\n",
-            "5       0      1\n",
-            "6       0      1\n",
+            "5       1      0\n",
+            "6       1      0\n",
             "7       0      1\n",
             "8       1      0\n",
             "9       0      1\n",
             "10      0      1\n",
-            "11      1      0\n",
-            "12      1      0\n",
-            "13      0      1\n",
-            "14      0      1\n",
+            "11      0      1\n",
+            "12      0      1\n",
+            "13      1      0\n",
+            "14      1      0\n",
             "15      1      0\n",
             "16      0      1\n",
             "17      0      1\n",
             "18      1      0\n",
-            "19      1      0\n"
+            "19      0      1\n"
           ]
         }
       ]
